Prevent header from cutting off bottom (#1343)
Same issue/fix as #873, this time affecting the stats side bar instead of the menu bar

--- a/static/sass/layout/_stats.scss
+++ b/static/sass/layout/_stats.scss
@@ -7,7 +7,9 @@
     background: #F8F8F8;
     box-shadow: none;
     color: _palette(accent2, fg-bold);
-    height: 100%;
+    height: -webkit-calc(100% - 3.5em);
+    height: -moz-calc(100% - 3.5em);
+    height: calc(100% - 3.5em);
     max-width: 80%;
     overflow-y: auto;
     padding: 1.5em 1.5em 4em 1.5em;
